--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1195,6 +1195,7 @@
         <!--Profile-->
         <scene sceneID="XWd-BD-luP">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jKW-UR-LlM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="Connexion" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6Ep-DF-EGL" customClass="ConnexionViewController" customModule="showapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="by4-u4-fhe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -1470,7 +1471,6 @@
                         <segue destination="4py-cE-Ht6" kind="presentation" identifier="forgetPasswordSegue" modalPresentationStyle="fullScreen" id="8Ql-NL-eh7"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jKW-UR-LlM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="669.56521739130437" y="-117.1875"/>
         </scene>
@@ -1653,8 +1653,26 @@
                     <view key="view" contentMode="scaleToFill" id="LuA-7q-XkR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DfK-jo-3zu">
+                                <rect key="frame" x="0.0" y="44" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Ta6-mY-RSV"/>
+                                    <constraint firstAttribute="width" constant="50" id="bsC-AZ-9ow"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <connections>
+                                    <action selector="back:" destination="2xk-ZQ-CT3" eventType="touchUpInside" id="0Nz-Mq-Htw"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="bkh-1q-UfK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DfK-jo-3zu" firstAttribute="top" secondItem="bkh-1q-UfK" secondAttribute="top" id="TFf-ce-2c9"/>
+                            <constraint firstItem="DfK-jo-3zu" firstAttribute="leading" secondItem="bkh-1q-UfK" secondAttribute="leading" id="Tuq-P7-ZSv"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FZp-p7-Y1r"/>
                 </viewController>
@@ -1882,11 +1900,10 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7XO-a2-CX1">
-                                <rect key="frame" x="127" y="702" width="160" height="35"/>
+                                <rect key="frame" x="127" y="741" width="160" height="31"/>
                                 <color key="backgroundColor" name="pink"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="FTY-kE-GPw"/>
-                                    <constraint firstAttribute="height" constant="35" id="gVg-gX-NE1"/>
+                                    <constraint firstAttribute="width" constant="160" id="SZy-4S-JPX"/>
                                 </constraints>
                                 <color key="tintColor" systemColor="systemBackgroundColor"/>
                                 <state key="normal" title="Button"/>
@@ -1898,7 +1915,7 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="envoyerMessage:" destination="34j-kk-D1d" eventType="touchUpInside" id="bNr-gk-0VR"/>
-                                    <segue destination="2xk-ZQ-CT3" kind="show" id="oyP-CZ-RmW"/>
+                                    <segue destination="2xk-ZQ-CT3" kind="presentation" modalPresentationStyle="fullScreen" id="o9T-tG-fz7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1906,13 +1923,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="OHw-fb-sZq" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="2sE-WQ-8aB"/>
+                            <constraint firstItem="OHw-fb-sZq" firstAttribute="top" secondItem="7XO-a2-CX1" secondAttribute="bottom" constant="10" id="5Zc-xt-OoN"/>
+                            <constraint firstItem="7XO-a2-CX1" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="843-8f-z36"/>
                             <constraint firstItem="64a-Pu-dSF" firstAttribute="top" secondItem="qPM-Es-OUl" secondAttribute="bottom" constant="10" id="BB4-ks-XHZ"/>
                             <constraint firstItem="ITI-0s-BBz" firstAttribute="top" secondItem="AvY-Rf-Q8g" secondAttribute="bottom" constant="80" id="BTn-QZ-bQY"/>
                             <constraint firstItem="VCV-M1-caz" firstAttribute="top" secondItem="5ef-dn-HOF" secondAttribute="bottom" constant="10" id="CJQ-pr-uhM"/>
                             <constraint firstItem="VCV-M1-caz" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="KME-J9-9tm"/>
                             <constraint firstItem="AvY-Rf-Q8g" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="OH9-us-BMi"/>
                             <constraint firstItem="AvY-Rf-Q8g" firstAttribute="top" secondItem="mmt-dt-dDl" secondAttribute="top" constant="10" id="VBT-31-oah"/>
-                            <constraint firstItem="7XO-a2-CX1" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="aUA-TW-D3M"/>
                             <constraint firstItem="ITI-0s-BBz" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="ack-CY-2Gx"/>
                             <constraint firstItem="5ef-dn-HOF" firstAttribute="top" secondItem="ITI-0s-BBz" secondAttribute="bottom" constant="10" id="bPs-Uu-wcQ"/>
                             <constraint firstItem="qPM-Es-OUl" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="g0h-I3-UcR"/>
@@ -1920,7 +1938,6 @@
                             <constraint firstItem="mmt-dt-dDl" firstAttribute="bottom" secondItem="OHw-fb-sZq" secondAttribute="bottom" id="kwR-HK-Adp"/>
                             <constraint firstItem="5ef-dn-HOF" firstAttribute="centerX" secondItem="mmt-dt-dDl" secondAttribute="centerX" id="mOS-9s-JRf"/>
                             <constraint firstItem="qPM-Es-OUl" firstAttribute="top" secondItem="VCV-M1-caz" secondAttribute="bottom" constant="10" id="ujc-dR-hLO"/>
-                            <constraint firstItem="OHw-fb-sZq" firstAttribute="top" secondItem="7XO-a2-CX1" secondAttribute="bottom" constant="45" id="z4r-ZB-ewJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="D2S-vC-rAx"/>
@@ -2091,22 +2108,6 @@
                                                         <constraint firstAttribute="width" constant="180" id="aMj-U8-ftV"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1r-Ff-w4X">
-                                                    <rect key="frame" x="36" y="345" width="130" height="30"/>
-                                                    <color key="backgroundColor" red="0.89947205779999995" green="0.65115249159999999" blue="0.7920641303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="130" id="Gyf-C4-pVp"/>
-                                                        <constraint firstAttribute="height" constant="30" id="nWm-ea-QaS"/>
-                                                    </constraints>
-                                                    <color key="tintColor" systemColor="systemBackgroundColor"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Add to Cart"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <integer key="value" value="15"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1hy-Sr-3OY">
                                                     <rect key="frame" x="10" y="250" width="132" height="40"/>
                                                     <constraints>
@@ -2129,14 +2130,12 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="n1r-Ff-w4X" secondAttribute="bottom" constant="10" id="2Fj-7V-rjE"/>
                                                 <constraint firstItem="WIL-rf-wei" firstAttribute="top" secondItem="HHu-hf-Y1i" secondAttribute="top" constant="10" id="5do-lc-1ia"/>
                                                 <constraint firstItem="WIL-rf-wei" firstAttribute="centerX" secondItem="HHu-hf-Y1i" secondAttribute="centerX" id="73N-C0-sh5"/>
                                                 <constraint firstItem="aBX-qx-hH8" firstAttribute="leading" secondItem="HHu-hf-Y1i" secondAttribute="leading" constant="10" id="R63-sK-oQ3"/>
                                                 <constraint firstItem="aBX-qx-hH8" firstAttribute="top" secondItem="1hy-Sr-3OY" secondAttribute="bottom" constant="10" id="TqP-2P-7sj"/>
                                                 <constraint firstItem="1hy-Sr-3OY" firstAttribute="leading" secondItem="HHu-hf-Y1i" secondAttribute="leading" constant="10" id="pHx-sB-Ks1"/>
                                                 <constraint firstItem="1hy-Sr-3OY" firstAttribute="top" secondItem="WIL-rf-wei" secondAttribute="bottom" constant="10" id="sbF-fl-5L4"/>
-                                                <constraint firstItem="n1r-Ff-w4X" firstAttribute="centerX" secondItem="HHu-hf-Y1i" secondAttribute="centerX" id="tgZ-Tt-WIB"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="202" height="385"/>
@@ -2491,7 +2490,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="CQc-dh-lYr"/>
-        <segue reference="iBf-cV-a8K"/>
+        <segue reference="Kza-w1-WLq"/>
         <segue reference="3zH-gj-nru"/>
         <segue reference="6ei-Hb-nWL"/>
     </inferredMetricsTieBreakers>
