--- a/admin/admin.storyboard
+++ b/admin/admin.storyboard
@@ -298,7 +298,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="2qa-mQ-pQh"/>
+        <segue reference="1et-pe-QiU"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
